# aegis_vercel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  README_aegis-api-two.md  RELEASE_v0.4.2.md  VERCEL_DEPLOY.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
apps/api/: main.py  requirements-vercel.txt  requirements.txt
apps/api/routers/: fleet.py  threads.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
data/seed/: confluence_checkout_slo.md
docs/: architecture.md
evals/reports/: latest.md
infra/: Dockerfile  docker-compose.yml  langgraph.json
scripts/: ingest_docs.py  run_evals.py  seed_memory.py
tests/: test_graph_compilation.py  test_rag_loop.py  test_tools.py
